--- a/src/app/pages/transactions/debit/createDebit/createDebit.html
+++ b/src/app/pages/transactions/debit/createDebit/createDebit.html
@@ -37,12 +37,13 @@
                   <label><strong>Metadata <i uib-tooltip-html="'<strong>Metadata should be entered in JSON format. e.g. {&#34;Hello&#34;: &#34;World&#34;}</strong>'" class="ion-information-circled"></i></strong></label>
                   <textarea rows="4" type="text" ng-model="debitData.metadata" class="form-control"  placeholder='e.g. {"Hello" : "World"}'></textarea>
               </div>
-              <div class="divider">
-                  <label class="checkbox-inline custom-checkbox nowrap">
-                      <input type="checkbox"  ng-model="debitData.confirm_on_create">
-                      <span>Confirm on create</span>
-                  </label>
-                  <i uib-tooltip-html="'<strong>When this option is disabled, a pending transaction will be created, requiring an update or manual “completion” via the dashboard.</strong>'" class="ion-information-circled"></i>
+              <div>
+                  <div class="form-group">
+                      <label><strong>Status</strong></label>
+                      <select class="form-control pointer" ng-model="debitData.status"
+                              ng-options="status for status in transactionStatus">
+                      </select>
+                  </div>
               </div>
             </div>
         </div>
