--- a/src/app/pages/transactions/history/historyModal/historyModal.html
+++ b/src/app/pages/transactions/history/historyModal/historyModal.html
@@ -127,6 +127,6 @@
     </div>
     <div class="modal-footer">
         <button type="button" ng-hide="transaction.status == 'failed'" ng-disabled="updatingTransaction" class="transaction-details-button btn btn-danger pull-left" ng-click="updateTransactionConfirm('failed')">Cancel Transaction</button>
-        <button type="button" ng-show="transaction.status == 'pending'" ng-disabled="updatingTransaction" class="transaction-details-button btn btn-primary pull-right" ng-click="updateTransactionConfirm('complete')">Complete Transaction</button>
+        <button type="button" ng-show="transaction.status == 'pending' || transaction.status == 'initiating'" ng-disabled="updatingTransaction" class="transaction-details-button btn btn-primary pull-right" ng-click="updateTransactionConfirm('complete')">Complete Transaction</button>
     </div>
 </div>
