--- a/src/app/pages/currency/overview/overviewContentTop/overviewContentTop.html
+++ b/src/app/pages/currency/overview/overviewContentTop/overviewContentTop.html
@@ -1,12 +1,12 @@
-<div ba-panel ba-panel-title="Users Balances" class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
-    <strong>{{selectedCurrency.symbol}} {{currencyOverviewData.balance_total | currencyModifiersFilter: selectedCurrency.divisibility}}</strong>
+<div ba-panel ba-panel-title="Users available balances" class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+    <strong>{{selectedCurrency.symbol}} {{currencyOverviewData.available_balance_total | currencyModifiersFilter: selectedCurrency.divisibility}}</strong>
 </div>
-<div ba-panel ba-panel-title="24h Volume" class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+<div ba-panel ba-panel-title="24h volume" class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
     <strong>{{selectedCurrency.symbol}} {{currencyOverviewData.balance_24h | currencyModifiersFilter: selectedCurrency.divisibility}}</strong>
 </div>
-<div ba-panel ba-panel-title="Total Users" class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+<div ba-panel ba-panel-title="Total users" class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
     <strong ng-bind="currencyOverviewUsersData.total"></strong>
 </div>
-<div ba-panel ba-panel-title="Active Users" class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+<div ba-panel ba-panel-title="Active users" class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
     <strong ng-bind="currencyOverviewUsersData.active"></strong>
 </div>
