--- a/src/app/pages/users/userDetails/userDetails.html
+++ b/src/app/pages/users/userDetails/userDetails.html
@@ -1,4 +1,6 @@
 <content-top></content-top>
+<button ng-hide="user.active" ng-click="toggleActivateUser(true)" class="btn pull-right btn-primary user-accounts-btn user-btn-active">Active</button>
+<button ng-show="user.active" ng-click="toggleActivateUser(false)" class="btn pull-right btn-danger user-accounts-btn user-btn-deactive">Deactivate</button>
 <button ng-csv="getCSVArray" filename="{{getFileName}}"
         class="btn pull-right btn-primary user-accounts-btn user-btn-export">Export</button>
 <div class="user-details-view" ng-hide="loadingUser">
