change: change button name in user details for reactivating a user

--- a/src/app/pages/users/userDetails/userDetails.html
+++ b/src/app/pages/users/userDetails/userDetails.html
@@ -1,5 +1,5 @@
 <content-top></content-top>
-<button ng-hide="user.active" ng-click="toggleActivateUser(true)" class="btn pull-right btn-primary user-accounts-btn user-btn-active">Active</button>
+<button ng-hide="user.active" ng-click="toggleActivateUser(true)" class="btn pull-right btn-primary user-accounts-btn user-btn-active">Reactivate</button>
 <button ng-show="user.active" ng-click="toggleActivateUser(false)" class="btn pull-right btn-danger user-accounts-btn user-btn-deactive">Deactivate</button>
 <button ng-csv="getCSVArray" filename="{{getFileName}}"
         class="btn pull-right btn-primary user-accounts-btn user-btn-export">Export</button>
