--- a/src/sass/variantcss/_userDetails.scss
+++ b/src/sass/variantcss/_userDetails.scss
@@ -1,3 +1,12 @@
+.user-deactivated{
+  background-color: $danger;
+  height: 40px;
+  color: white;
+  font-size: 14px;
+  line-height: 20px;
+  padding: 10px;
+}
+
 .user-btn-export{
   position: relative;
   top: -34px;
@@ -5,6 +14,7 @@
 }
 
 .user-btn-active{
+  padding: 6px;
   position: relative;
   top: -34px;
 }
