change: removed log navigation option from webhooks

--- a/src/app/pages/webhooks/webhooks.html
+++ b/src/app/pages/webhooks/webhooks.html
@@ -9,11 +9,11 @@
                             <h5 ng-class="{'active-webhooks-nav': locationIndicator == 'list'}" class="pointer">List</h5>
                         </a>
                     </li>
-                    <li class="webhooks-list-navigation" >
-                        <a href="#/webhooks/logs">
-                            <h5 ng-class="{'active-webhooks-nav': locationIndicator == 'logs'}" class="pointer">Logs</h5>
-                        </a>
-                    </li>
+                    <!--<li class="webhooks-list-navigation" >-->
+                        <!--<a href="#/webhooks/logs">-->
+                            <!--<h5 ng-class="{'active-webhooks-nav': locationIndicator == 'logs'}" class="pointer">Logs</h5>-->
+                        <!--</a>-->
+                    <!--</li>-->
                 </ul>
             </div>
         </div>
